syntax = "proto3";

package price;

option go_package = "/price/v1;price";

message ListParamsSt {
    int64 page = 1;
    int64 page_size = 2;
    repeated string sort = 3;
}

message PaginationInfoSt {
    int64 page = 1;
    int64 page_size = 2;
}

message ErrorRep {
    string code = 1;
    string message = 2;
    map<string, string> fields = 3;
}